--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -109,12 +109,10 @@
           </div>
           <div class="contact--form">
 
-            <div >
+              <form>
                 <ul class="error">
                     
                 </ul>
-            </div>
-              <form>
                   <div class="contact--input">
 
                     <label for="name"> Name</label>
@@ -145,7 +143,7 @@
             <img src="/images/zuri.png"/> 
         </div>
         <img src="/images/i4g.png" class="i4g"/> 
-            
+            <a href="https://internship.zuri.team/"> zuri internship</a>
            <p>HNG Internship Stage Two</p> 
       </div>
   </footer>
