--- a/src/public/stylesheets/index.css
+++ b/src/public/stylesheets/index.css
@@ -192,14 +192,14 @@ body::-webkit-scrollbar{
 .about--body .about--skills{
   text-align: left;
   padding: 2rem;
-    
+  
   border-bottom: 2px solid #8a5a44;
   margin-top: 5rem;
 }
 
 
 .about--skills .skills--list .skills--item{
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 
 .about--skills ul li ul:nth-of-type(1){
@@ -254,7 +254,7 @@ body::-webkit-scrollbar{
   outline: none;
   padding: 1rem;
   border: none;
-  
+  width: 35rem;
 }
 
 .contact--form button{
