--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href= "/stylesheets/index.css" rel="stylesheet" type="text/css" crossorigin="anonymous"/>
-    <!-- <link href= "/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous"/> -->
+    <link href= "/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous"/>
     <title>Resume Esdeath</title>
 </head>
 
@@ -93,11 +93,120 @@
 
                   Incisive operations and backend developer, just starting my career and open job functions ranging from frontend to backend development. Possesses an ability to combine vision, dedication  and strong technical prowess in addition to a well-developed skill in continuous learning and self-development.
               </br>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente minus, suscipit maxime, harum saepe enim maiores ea minima sequi neque animi quia magnam incidunt quam expedita, quod blanditiis consequatur eos.
-                  Impedit nihil est in enim? Quia quaerat culpa ab saepe ipsa velit incidunt illo dolor id corporis neque repudiandae consequuntur totam exercitationem nemo, ex atque maxime, mollitia, qui cupiditate nam!
+              </br>
+
+              So far, i have;
+
+              <ul>
+                  <li>Learned the basics of programming with a large team of developers.</li>
+                    <li>Learned the use of frontend and backend tools like git, html, css, javascript, mongodb database and nodeJs backend logic.</li>
+              <li>Planning, organizing, coordinating and controlling the team activities alongside colleagues and supervisors.</li>
+                <li>Learned to create APIs with the use of node js technology and learned to make requests to Apis from the frontend. </li>
+            </ul>
+
               </article>
               </div>
           </div>
+      </div>
+  </section>
+
+  <section>
+      <div class="services container">
+          <div class="heading">
+              <h3>
+                  SERVICES
+              </h3>
+          </div>
+        <div class="card-container">
+            <div class="card" ">
+  <div class="card-body">
+    <h5 class="card-title">Frontend Development</h5>
+    <div class="card-img">
+        <img src="https://images.unsplash.com/photo-1511376777868-611b54f68947?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZnJvbnRlbmR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="frontend">
+    </div>
+    <p class="card-text">
+        Develop designs into html and css pages beautifully and also create javascript interactivity on the webpage
+    </p>
+   
+  </div>
+</div>
+            <div class="card" ">
+  <div class="card-body">
+    <h5 class="card-title">Clean Coded</h5>
+    <div class="card-img">
+        <img src="https://media.istockphoto.com/photos/holding-a-white-blank-final-piece-of-the-jigsaw-picture-id166396032?b=1&k=20&m=166396032&s=170667a&w=0&h=jEGj-duXkYYwvKusRj2LzrcWvGOf88_VZDhSSmlBSbc=" alt="frontend">
+    </div>
+    <p class="card-text">
+        Ensuring that codes are neatly written and are easily understood by anyone assessing them.
+    </p>
+   
+  </div>
+</div>
+        </div>
+      </div>
+  </section>
+
+  <section id="projects">
+      <div class="projects container">
+          <div class="heading">
+              <h3>PROJECTS</h3>
+              
+        </div>
+      <p>The following are some of the frontend projects i've worked on</p>  
+
+          <div class="card-container">
+
+          
+          <div class="card">
+  <img class="card-img-top" src="/images/foodine.png" alt="Foodine App">
+  <div class="card-body">
+       <h5 class="card-title">Foodine Meal Ordering App</h5>
+    <p class="card-text">This is an ongoing food ordering application being developed by myself and a group of friends</p>
+    <a href="https://foodinemealapp.herokuapp.com/" class="card-link"target="_blank"> Live Demo</a>
+</div>
+</div>
+<div class="card">
+    <img class="card-img-top" src="/images/thecloset.png" alt="The closet App">
+    <div class="card-body">
+        <h5 class="card-title">The Closet Marketing App</h5>
+        <p class="card-text">This is a bootstrapped landing page i created</p>
+        <a href="https://nifty-lumiere-b22b44.netlify.app/" class="card-link"target="_blank"> Live Demo</a>
+  </div>
+</div>
+<div class="card">
+    <img class="card-img-top" src="/images/talentPool.png" alt="Talent pool">
+    <div class="card-body">
+        <h5 class="card-title">Talent Pool App</h5>
+        <p class="card-text">I worked with a team of people to create this application. This page is one of my contributions</p>
+        <a href="https://vibrant-mestorf-581188.netlify.app/src/directory.html" class="card-link"target="_blank"> Live Demo</a>
+  </div>
+</div>
+<div class="card">
+    <img class="card-img-top" src="/images/calculator.png" alt="Calculator">
+    <div class="card-body">
+        <h5 class="card-title">Simple Javascript Calculator</h5>
+        <p class="card-text">I developed a calculator with html, css and javascript</p>
+        <a href="https://ecstatic-tesla-c90e4c.netlify.app/" class="card-link"target="_blank"> Live Demo</a>
+  </div>
+</div>
+<div class="card">
+    <img class="card-img-top" src="/images/cryptvestor.png" alt="Cryptvestor">
+    <div class="card-body">
+        <h5 class="card-title">Cryptvestor Landing page</h5>
+        <p class="card-text">I developed the cryptvestor landing page app with pure html and css</p>
+        <a href="https://eager-fermat-667a26.netlify.app/#" class="card-link"target="_blank"> Live Demo</a>
+  </div>
+</div>
+<div class="card">
+    <img class="card-img-top" src="/images/tableData.png" alt="Table Data">
+    <div class="card-body">
+        <h5 class="card-title">Table data page</h5>
+        <p class="card-text">Javascript form that inputs user details and posts to a table</p>
+        <a href="https://clever-wing-ae3c43.netlify.app"class="card-link" target="_blank"> Live Demo</a>
+  </div>
+</div>
+  </div>
+</div>
       </div>
   </section>
 
@@ -135,17 +244,10 @@
           </div>
       </div>
   </section>
+
   <footer>
       <div class="footer container">
             <p>OREFEJO ADEEPEJU</p>
-            <div class="footer--img">
-                <img src="/images/hngLogo.png"/> 
-            <img src="/images/zuri.png"/> 
-        </div>
-        <img src="/images/i4g.png" class="i4g"/> 
-            <a href="https://internship.zuri.team/"> zuri internship</a>
-           <p>HNG Internship Stage Two</p> 
-      </div>
   </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
