--- a/src/public/stylesheets/index.css
+++ b/src/public/stylesheets/index.css
@@ -28,6 +28,8 @@ body::-webkit-scrollbar{
   background: linear-gradient(to right, #000000, #434343);
 }
 
+
+
 #hero{
   height: 100vh;
   width: 100%;
@@ -53,8 +55,8 @@ body::-webkit-scrollbar{
 }
 
 .container{
-  min-height: 100vh;
-    width: 100%;
+  min-height: 100vh !important;
+    max-width: 100% !important;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -218,6 +220,54 @@ body::-webkit-scrollbar{
   padding: 2rem;
 }
 
+.card-img{
+  width: 100%;
+}
+
+.card-img img{
+  width: 100%;
+}
+
+.projects, .services{
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.services  .card-title{
+  font-size: 1.7rem;
+   padding: 1rem 0;
+
+}
+
+.services .card-text{
+  padding: 2rem 0;
+  font-size: 1.4rem;
+}
+
+.projects .heading, .services .heading{
+  font-size: 2.4rem;
+  display: flex;
+
+}
+.projects h5{
+  font-size: 1.7rem;
+}
+
+.projects p, .projects a{
+  font-size: 1.4rem;
+}
+
+.card-container{
+  padding: 10rem 5rem;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: minmax(300px, auto);
+  grid-gap: 3rem;
+}
+.card{
+  width: 100%;
+}
+
 .contact--caption{
   color: #fff;
   margin-bottom: 5rem;
@@ -226,7 +276,7 @@ body::-webkit-scrollbar{
 }
 
 .contact--form{
- 
+ width: 85%;
   padding: 4rem 3rem;
   box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
   backdrop-filter: blur(10px);
@@ -283,7 +333,7 @@ body::-webkit-scrollbar{
 
 
 .footer{
-  min-height: 35vh;
+  min-height: 35vh !important;
   background-color: #8a5a44;
   color: #fff;
   font-size: 1.5rem;
@@ -398,7 +448,7 @@ display: none;
   background-color: #8a5a44;
   display: flex;
   flex-direction: row;
-padding: 2rem 7rem 2rem 8rem;
+padding: 2rem 7rem 2rem 8rem !important;
 }
 
 .contact--caption{
@@ -413,5 +463,12 @@ padding: 2rem 7rem 2rem 8rem;
 .contact--caption{
   font-size: 3rem;
   color: #fff;
+}
+.card-container{
+  padding: 10rem 15rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: minmax(300px, auto);
+  grid-gap: 3rem;
 }
 }
