--- a/src/public/stylesheets/index.css
+++ b/src/public/stylesheets/index.css
@@ -144,7 +144,7 @@ body::-webkit-scrollbar{
     text-align: center;
     max-width: 1500px;
     margin: 0;
-    padding: 12rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .about--header{
@@ -226,6 +226,10 @@ body::-webkit-scrollbar{
 
 .card-img img{
   width: 100%;
+}
+
+.services .heading h3, .projects .heading h3{
+  font-size: 2.4rem;
 }
 
 .projects, .services{
@@ -449,6 +453,8 @@ display: none;
    margin-bottom: 2rem;
    font-weight: 400;
 }
+
+
 .contact{
   background-color: #8a5a44;
   display: flex;
