--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,6 +21,9 @@
             </div>
         </div>
   </section>
+   <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="blob" style="width: 20rem;">
+  <path fill="#8A5A44" d="M61.4,-22.5C68.7,2.3,56,31,33.4,47.9C10.8,64.7,-21.7,69.7,-39.3,56.4C-56.8,43.1,-59.4,11.5,-50.4,-15.8C-41.3,-43.1,-20.7,-66,3.2,-67C27.1,-68.1,54.2,-47.2,61.4,-22.5Z" transform="translate(100 100)" />
+</svg>
   <section id="about">
      
       <div class="about container">
@@ -109,8 +112,9 @@
           </div>
       </div>
   </section>
-
-  <section>
+  <section id="services">
+     
+   </div>
       <div class="services container">
           <div class="heading">
               <h3>
@@ -210,6 +214,7 @@
       </div>
   </section>
 
+ 
   <section id="contact">
       <div class="contact container">
           <div class="contact--caption">
