--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -94,7 +94,7 @@
                 </div>
               <article class="about--summary">
 
-                  Incisive operations and backend developer, just starting my career and open job functions ranging from frontend to backend development. Possesses an ability to combine vision, dedication  and strong technical prowess in addition to a well-developed skill in continuous learning and self-development.
+                  Incisive operations and Fullstack developer, just starting my career and open job functions ranging from frontend to backend development. Possesses an ability to combine vision, dedication  and strong technical prowess in addition to a well-developed skill in continuous learning and self-development.
               </br>
               </br>
 
