--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,7 +16,7 @@
       <div class="hero container">
           <div class="hero--caption">
               <P>Orefejo Adepeju <span></span></P>
-              <p>Fullstack Frontend Developer <span></span></p>
+              <p>Fullstack Developer <span></span></p>
               <a href="#about" class="cta" animate__fadeInLeft>ABOUT ME</a>
             </div>
         </div>
