--- a/src/public/stylesheets/index.css
+++ b/src/public/stylesheets/index.css
@@ -53,11 +53,11 @@ body::-webkit-scrollbar{
 }
 
 .container{
-  min-height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  min-height: 100vh !important;
+    max-width: 100% !important;
+    display: flex ;
+    align-items: center ;
+    justify-content: center ;
 }
 
 #hero .hero{
@@ -227,13 +227,18 @@ body::-webkit-scrollbar{
 
 .contact--form{
  
-  padding: 8rem 3rem;
+  padding: 0 3rem;
+  min-height: 53rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
   box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
   backdrop-filter: blur(10px);
   
 }
 .contact--form form{
   display: flex;
+  width: 45rem;
   color: #fff;
   flex-direction: column;
   height: 40rem;
@@ -251,14 +256,24 @@ body::-webkit-scrollbar{
 }
 
 .contact--input label{
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .contact--input input, .contact--input textarea, .contact--input input:hover, .contact--input textarea:hover{
   outline: none;
   padding: 1rem;
   border: none;
- 
+ font-family: "Poppins", sans-serif; 
+    font-size: 1rem !important; 
+    
+}
+
+form .contact--input.success input, form .contact--input.success textarea{
+  border: 2px solid rgb(121, 226, 121);
+}
+
+form .contact--input.error input, form .contact--input.error textarea{
+  border: 2px solid rgb(231, 25, 25);
 }
 
 .contact--form button{
@@ -269,6 +284,7 @@ body::-webkit-scrollbar{
       color: #fff;
       border: none;
       cursor: pointer;
+      font-size: 1.5rem;
 
 }
 
@@ -280,15 +296,30 @@ body::-webkit-scrollbar{
 
 .error--message{
   list-style: none;
-  color: #dc143c;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1.15rem;
+}
+
+.success--message{
+  list-style: none;
+  color: #fff;
+  
   font-weight: 400;
   font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: .4em;
+  transition: all 0.3s ease-in ;
+}
+
+.contact--form form small{
+  
+  visibility: hidden;
 }
 
 
-
 .footer{
-  min-height: 35vh;
+  min-height: 35vh !important;
   background-color: #8a5a44;
   color: #fff;
   font-size: 1.5rem;
@@ -403,7 +434,7 @@ display: none;
   background-color: #8a5a44;
   display: flex;
   flex-direction: row;
-padding: 2rem 7rem 2rem 8rem;
+padding: 2rem 7rem 2rem 8rem !important;
 }
 
 .contact--caption{
@@ -412,7 +443,7 @@ padding: 2rem 7rem 2rem 8rem;
 .contact--form{
   flex: 0.5;
   color: #fff;
-  padding: 4rem 8rem;
+  padding: 0 8rem;
 }
 
 .contact--caption{
