--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -40,72 +40,17 @@
               <div class="desktop--view">
               <div class="about--skills">
                     <p class="skills--header">Skills</p>
-                    <p>
-                        
-                        The following are the skills i have developed so far and i belive they will be of importance to various teams in search of them.
-
-                    </p>
-                    <ul class="skills--list">
-                        <li class="skills--item">
-                            Team Work
-                        </li>
-                        <li class="skills--item">
-                            Time Management
-                        </li>
-                        <li class="skills--item">
-                            Frontend: 
-                            <ul class="skills--subItem">
-                                <li>
-                                    <i>Html</i>
-                                    
-                                </li>
-                                <li>
-                                    <i>Css</i>
-                                    
-                                </li>
-                                <li>
-                                    <i>Bootstrap</i>
-                                    
-                                </li>
-                                <li>
-                                    <i>Reactjs</i>
-                                    
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="skills--item">
-                            Backend: 
-                            <ul class="skills--subItem">
-                                <li>
-                                   <i>Node</i> 
-                                </li>
-                                <li>
-                                    <i>Express</i>
-                                    
-                                </li>
-                                <li>
-                                    <i>MongoDb/Mongoose ODM</i>
-                                    
-                                </li>
-                                
-                            </ul>
-                        </li>
-                    </ul>
+                      Programming Languages: JavaScript and Python | Backend Language: Nodejs | Database Language: Mongo dB
+PostgreSQL
                 </div>
               <article class="about--summary">
 
-                  Incisive operations and Fullstack developer, just starting my career and open job functions ranging from frontend to backend development. Possesses an ability to combine vision, dedication  and strong technical prowess in addition to a well-developed skill in continuous learning and self-development.
+              Software Developer and great team player with about 1-year practical training experience on frontend and backend
+development using programming languages such as python and JavaScript.
               </br>
               </br>
 
-              So far, i have;
-
-              <ul>
-                  <li>Learned the basics of programming with a large team of developers.</li>
-                    <li>Learned the use of frontend and backend tools like git, html, css, javascript, mongodb database and nodeJs backend logic.</li>
-              <li>Planning, organizing, coordinating and controlling the team activities alongside colleagues and supervisors.</li>
-                <li>Learned to create APIs with the use of node js technology and learned to make requests to Apis from the frontend. </li>
-            </ul>
+          
 
               </article>
               </div>
@@ -123,17 +68,53 @@
               <h3>PROJECTS</h3>
               
         </div>
-      <p>The following are some of the frontend projects i've worked on</p>  
+      <p>The following are some of the frontend projects i've worked on. <strong>This list includes projects that are still in progress and static websites</strong> </p>  
 
           <div class="card-container">
+   <div class="card">
+  <img class="card-img-top" src="/images/bingo.png" alt="bingo App">
+  <div class="card-body">
+       <h5 class="card-title">Bingo App</h5>
+    <p class="card-text">Multiplayer Bingo Game. Framework: Reactjs, Redux</p>
+    <a href="https://bingo-game-adepeju4.vercel.app/" class="card-link"target="_blank"> Live Demo</a>
+    <a href="https://github.com/adepeju4/bingo-game.git" class="card-link"target="_blank">Github</a>
+</div>  
+  </div>        
 
-          
-          <div class="card">
+<div class="card">
+  <img class="card-img-top" src="/images/elsa.png" alt="Foodine App">
+  <div class="card-body">
+       <h5 class="card-title">Elsa Real Estate Website</h5>
+    <p class="card-text"><strong>In Progress:</strong> This is an ongoing real estate site that displays available homes for purchase. Framework: Reactjs, Sass</p>
+    <a href="https://elsa-adepeju4.vercel.app/" class="card-link"target="_blank"> Live Demo</a>
+     <a href="https://github.com/adepeju4/elsa.git" class="card-link"target="_blank">Github</a>
+</div>
+</div>
+<div class="card">
+  <img class="card-img-top" src="/images/crystal.png" alt="Crystal Hotel">
+  <div class="card-body">
+       <h5 class="card-title">Crystal Hotel</h5>
+    <p class="card-text">Static Hotel Website </p>
+    <a href="https://hng-crystal-hotel.netlify.app/" class="card-link"target="_blank"> Live Demo</a>
+    <a href="https://github.com/hngi/Team-Incredible-FE-Hotel-Thug" class="card-link"target="_blank">Github</a>
+</div>
+</div>
+<div class="card">
+    <img class="card-img-top" src="/images/calculator.png" alt="Calculator">
+    <div class="card-body">
+        <h5 class="card-title">Simple Javascript Calculator</h5>
+        <p class="card-text">I developed a calculator with html, css and javascript</p>
+        <a href="https://ecstatic-tesla-c90e4c.netlify.app/" class="card-link"target="_blank"> Live Demo</a>
+          <a href="https://github.com/adepeju4/my-calculator.git" class="card-link"target="_blank">Github</a>
+  </div>
+</div>
+<div class="card">
   <img class="card-img-top" src="/images/foodine.png" alt="Foodine App">
   <div class="card-body">
        <h5 class="card-title">Foodine Meal Ordering App</h5>
-    <p class="card-text">This is an ongoing food ordering application being developed by myself and a group of friends</p>
+    <p class="card-text"><strong>In Progress:</strong>  This is a food ordering application being developed by myself and a group of friends. Framework: Reactjs, Redux</p>
     <a href="https://foodinemealapp.herokuapp.com/" class="card-link"target="_blank"> Live Demo</a>
+      <a href="https://github.com/adepeju4/Group-Four.git" class="card-link"target="_blank">Github</a>
 </div>
 </div>
 <div class="card">
@@ -142,6 +123,7 @@
         <h5 class="card-title">The Closet Marketing App</h5>
         <p class="card-text">This is a bootstrapped landing page i created</p>
         <a href="https://nifty-lumiere-b22b44.netlify.app/" class="card-link"target="_blank"> Live Demo</a>
+          <a href="https://github.com/adepeju4/Team-Avenger-Envato-Marketing/tree/design-11" class="card-link"target="_blank">Github</a>
   </div>
 </div>
 <div class="card">
@@ -150,34 +132,59 @@
         <h5 class="card-title">Talent Pool App</h5>
         <p class="card-text">I worked with a team of people to create this application. This page is one of my contributions</p>
         <a href="https://vibrant-mestorf-581188.netlify.app/src/directory.html" class="card-link"target="_blank"> Live Demo</a>
+          <a href="https://github.com/adepeju4/TalentPoolES" class="card-link"target="_blank">Github</a>
   </div>
 </div>
-<div class="card">
-    <img class="card-img-top" src="/images/calculator.png" alt="Calculator">
-    <div class="card-body">
-        <h5 class="card-title">Simple Javascript Calculator</h5>
-        <p class="card-text">I developed a calculator with html, css and javascript</p>
-        <a href="https://ecstatic-tesla-c90e4c.netlify.app/" class="card-link"target="_blank"> Live Demo</a>
-  </div>
-</div>
+
 <div class="card">
     <img class="card-img-top" src="/images/cryptvestor.png" alt="Cryptvestor">
     <div class="card-body">
         <h5 class="card-title">Cryptvestor Landing page</h5>
         <p class="card-text">I developed the cryptvestor landing page app with pure html and css</p>
         <a href="https://eager-fermat-667a26.netlify.app/#" class="card-link"target="_blank"> Live Demo</a>
+
   </div>
 </div>
-<div class="card">
-    <img class="card-img-top" src="/images/tableData.png" alt="Table Data">
+
+  </div>
+</div>
+      </div>
+
+
+      <div>
+        <h1 style="text-align: center;">
+          Backend Contributions
+        </h1>
+        <div class="card-container">
+          <div class="card">
+    <img class="card-img-top" src="/images/zurichat.png" alt="Zuri Chat">
     <div class="card-body">
-        <h5 class="card-title">Table data page</h5>
-        <p class="card-text">Javascript form that inputs user details and posts to a table</p>
-        <a href="https://clever-wing-ae3c43.netlify.app"class="card-link" target="_blank"> Live Demo</a>
+        <h5 class="card-title">ZuriChat App</h5>
+        <p class="card-text">Stack: Nodejs, express</p>
+ 
+          <a href="https://github.com/adepeju4/zc_plugin_company_goals.git" class="card-link"target="_blank">Github</a>
   </div>
 </div>
+
+  <div class="card">
+    <img class="card-img-top" src="/images/foodine.png" alt="Foodine">
+    <div class="card-body">
+        <h5 class="card-title">Foodine App</h5>
+        <p class="card-text">Stack: Nodejs, express, Mongodb</p>
+ 
+          <a href="https://github.com/adepeju4/BE-Test.git" class="card-link"target="_blank">Github</a>
   </div>
 </div>
+  <div class="card">
+    
+    <div class="card-body">
+        <h5 class="card-title">Bookstore Api</h5>
+        <p class="card-text">Stack: Nodejs, express, Mongodb</p>
+ 
+          <a href="https://github.com/adepeju4/bookstore-authorization.git" class="card-link"target="_blank">Github</a>
+  </div>
+</div>
+        </div>
       </div>
   </section>
 
