--- a/src/public/stylesheets/index.css
+++ b/src/public/stylesheets/index.css
@@ -4,6 +4,11 @@
     padding: 0;
     box-sizing: inherit;
   }
+
+  :root {
+  touch-action: pan-x pan-y;
+  height: 100% 
+}
   
   html {
     box-sizing: border-box;
